--- a/composer.json
+++ b/composer.json
@@ -18,23 +18,6 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "nwidart/laravel-menus": "^7.0",
-        "imagina/stylist": "^3.0",
-        "intervention/image": "^2.5",
-        "laracasts/presenter": "^0.2.4",
-        "laravelcollective/html": "^6.0",
-        "laravel/framework": "^8.13",
-        "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.0",
-        "maatwebsite/laravel-sidebar": "^2.4",
-        "mcamara/laravel-localization": "^1.6",
-        "nwidart/laravel-modules": "^8.0",
-        "ramsey/uuid": "^4.0",
-        "symfony/yaml": "^5.1",
-        "tightenco/ziggy": "^0.9.4",
-        "typicms/nestablecollection": "^1.1",
-        "venturecraft/revisionable": "^1.35",
-        "yajra/laravel-datatables-oracle": "~9.0",
         "idavoll/adminlte-theme": "4.0.x-dev",
         "idavoll/core-module": "4.0.x-dev",
         "idavoll/dashboard-module": "4.0.x-dev",
@@ -46,8 +29,26 @@
         "idavoll/tag-module": "4.0.x-dev",
         "idavoll/translation-module": "4.0.x-dev",
         "idavoll/user-module": "4.0.x-dev",
-        "idavoll/workshop-module": "4.0.x-dev"
-
+        "idavoll/workshop-module": "4.0.x-dev",
+        "imagina/stylist": "^3.0",
+        "intervention/image": "^2.5",
+        "laracasts/presenter": "^0.2.4",
+        "laravel/framework": "^8.13",
+        "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.0",
+        "laravelcollective/html": "^6.0",
+        "maatwebsite/laravel-sidebar": "^2.4",
+        "mcamara/laravel-localization": "^1.6",
+        "nwidart/laravel-menus": "^7.0",
+        "nwidart/laravel-modules": "^8.0",
+        "pragmarx/version": "^1.3",
+        "ramsey/uuid": "^4.0",
+        "spatie/laravel-cookie-consent": "^2.12",
+        "symfony/yaml": "^5.1",
+        "tightenco/ziggy": "^0.9.4",
+        "typicms/nestablecollection": "^1.1",
+        "venturecraft/revisionable": "^1.35",
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
