--- a/provision/environment/.env.stage
+++ b/provision/environment/.env.stage
@@ -12,7 +12,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=digiqrp
+DB_DATABASE=digiqrp_stage
 DB_USERNAME=root
 DB_PASSWORD=987400Kmh
 
