--- a/nginx/digiqrp-stage.conf
+++ b/nginx/digiqrp-stage.conf
@@ -63,25 +63,24 @@ server {
         }
 
 
-        listen 443 ssl; # managed by Certbot
-        ssl_certificate /etc/letsencrypt/live/www.digiqrp.com/fullchain.pem; # managed by Certbot
-        ssl_certificate_key /etc/letsencrypt/live/www.digiqrp.com/privkey.pem; # managed by Certbot
-        include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/stage.digiqrp.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/stage.digiqrp.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
 }
 
 server {
-    if ($host = digiqrp.com) {
+    if ($host = stage.digiqrp.com) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
-    if ($host = www.digiqrp.com) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
 
-    server_name stage.digiqrp.com;
+
+        server_name stage.digiqrp.com;
     listen 80;
     return 404; # managed by Certbot
+
 
 }
