--- a/.styleci.yml
+++ b/.styleci.yml
@@ -5,7 +5,8 @@ php:
   finder:
     exclude:
       - "Themes/Adminlte/assets"
-
+    not-path:
+      - "/Themes/Adminlte/assets"
     not-name:
       - index.php
       - server.php
