--- a/.styleci.yml
+++ b/.styleci.yml
@@ -8,6 +8,8 @@ php:
       - server.php
       - deploy.php
       - .env.prod
+    not-path:
+      - "Themes/Adminlte/assets/vendor/*"
 #js:
 #  finder:
 #    not-name:
