fixing issue with mobile view not displaying correctly

--- a/.styleci.yml
+++ b/.styleci.yml
@@ -8,6 +8,8 @@ php:
       - server.php
       - deploy.php
       - .env.prod
+      - fontawesome-webfont.eot
+      - fontawesome-webfont.ttf
     not-path:
       - "Themes/Adminlte/assets/vendor/*"
 #js:
