--- a/provision/environment/.env.prod
+++ b/provision/environment/.env.prod
@@ -43,3 +43,53 @@ PUSHER_APP_CLUSTER=eu
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+APP_NAME=Laravel
+APP_ENV=local
+APP_KEY=base64:SY3NRHuRcw/sEvc0kB/ula7O+cCvxWYVsp/dV/v8TQk=
+APP_DEBUG=true
+APP_CACHE=false
+INSTALLED=true
+APP_LOG_LEVEL=debug
+APP_URL=https://digiqrp.vm
+
+
+LOG_CHANNEL=stack
+
+DB_CONNECTION=mysql
+DB_HOST=10.211.55.2
+DB_PORT=3306
+DB_DATABASE=digiqrp
+DB_USERNAME=homestead
+DB_PASSWORD=secret
+
+BROADCAST_DRIVER=pusher
+CACHE_DRIVER=memcached
+TRANSLATIONS_CACHE_DRIVER=memcached
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=memcached
+SESSION_LIFETIME=120
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+MAIL_MAILER=smtp
+MAIL_HOST=192.168.10.10
+MAIL_PORT=8025
+#MAIL_USERNAME="your username"
+#MAIL_PASSWORD="your password"
+MAIL_ENCRYPTION=tls
+#MAIL_FROM_ADDRESS=null
+#MAIL_FROM_NAME="${APP_NAME}"
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=eu
+
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SENTRY_LARAVEL_DSN=https://1ea35d7788f54b6b931e6ef5936b6df9@o242607.ingest.sentry.io/5745699
+SENTRY_TRACES_SAMPLE_RATE=0.10
