--- a/provision/environment/.env.prod
+++ b/provision/environment/.env.prod
@@ -57,11 +57,11 @@ APP_URL=https://digiqrp.vm
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=10.211.55.2
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=digiqrp
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_USERNAME=root
+DB_PASSWORD=987400Kmh
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=memcached
