Added new translations & fixes

--- a/provision/environment/.env.prod
+++ b/provision/environment/.env.prod
@@ -17,8 +17,8 @@ DB_USERNAME=root
 DB_PASSWORD=987400Kmh
 
 BROADCAST_DRIVER=pusher
-CACHE_DRIVER=memcached
-TRANSLATIONS_CACHE_DRIVER=memcached
+CACHE_DRIVER=array
+TRANSLATIONS_CACHE_DRIVER=array
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=memcached
 SESSION_LIFETIME=120
