--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "pragmarx/version": "^1.3",
         "ramsey/uuid": "^4.0",
         "sentry/sentry-laravel": "^2.5",
+        "spatie/laravel-backup": "^6.16",
         "spatie/laravel-cookie-consent": "^2.12",
         "spatie/laravel-sitemap": "^5.9",
         "symfony/yaml": "^5.1",
