--- a/provision/environment/.env.prod
+++ b/provision/environment/.env.prod
@@ -17,10 +17,10 @@ DB_USERNAME=root
 DB_PASSWORD=987400Kmh
 
 BROADCAST_DRIVER=pusher
-CACHE_DRIVER=array
-TRANSLATIONS_CACHE_DRIVER=array
+CACHE_DRIVER=redis
+TRANSLATIONS_CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=memcached
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
 REDIS_HOST=127.0.0.1
