--- a/docker/app/enabled-xdebug.ini
+++ b/docker/app/enabled-xdebug.ini
@@ -9,3 +9,4 @@ xdebug.remote_enable=1
 xdebug.remote_connect_back=0
 xdebug.remote_host=docker.for.mac.localhost
 xdebug.remote_port=9000
+xdebug.idekey=PHPSTORM
