--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,13 @@ services:
     networks:
     - digiqrp_net
 
+  mailhog:
+    image: mailhog/mailhog:latest
+    container_name: myapp-mailhog
+    ports:
+      - "8003:1025"
+      - "8100:8025"
+
 volumes:
   redisdata:
     driver: local
