--- a/docker/build
+++ b/docker/build
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-docker build -t asgardcms/app:latest ./app
-docker build -t asgardcms/node:latest ./node
-docker build -t asgardcms/mysql:latest ./mysql
-docker build -t asgardcms/redis:latest ./redis
+docker build -t digiqrp/app:latest ./app
+docker build -t digiqrp/node:latest ./node
+docker build -t digiqrp/mysql:latest ./mysql
+docker build -t digiqrp/redis:latest ./redis
