--- a/config/version.yml
+++ b/config/version.yml
@@ -4,10 +4,10 @@ current:
   label: v
   major: 1
   minor: 4
-  patch: 0
+  patch: 2
   prerelease: ''
   buildmetadata: ''
-  commit: c113ee
+  commit: 30140c
   timestamp:
     year: 2021
     month: 9
