--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": "^7.3",
         "astrotomic/laravel-translatable": "^11.9",
         "cartalyst/sentinel": "^5.0",
+        "diglactic/laravel-breadcrumbs": "^7.0",
         "doctrine/dbal": "^2.11",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
