--- a/config/version.yml
+++ b/config/version.yml
@@ -4,10 +4,10 @@ current:
   label: v
   major: 1
   minor: 4
-  patch: 2
+  patch: 3
   prerelease: ''
   buildmetadata: ''
-  commit: 30140c
+  commit: 6cc5a8
   timestamp:
     year: 2021
     month: 9
