--- a/config/version.yml
+++ b/config/version.yml
@@ -4,10 +4,10 @@ current:
   label: v
   major: 1
   minor: 4
-  patch: 3
+  patch: 4
   prerelease: ''
   buildmetadata: ''
-  commit: 6cc5a8
+  commit: '9e1123'
   timestamp:
     year: 2021
     month: 9
