--- a/Themes/Prostar/package.json
+++ b/Themes/Prostar/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^3.3.7",
     "cross-env": "^3.2.3",
     "font-awesome": "^4.3.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "jquery": ">= 1.9.1",
     "laravel-mix": "0.*",
     "prismjs": "^1.6.0",
