--- a/config/version.yml
+++ b/config/version.yml
@@ -4,10 +4,10 @@ current:
   label: v
   major: 1
   minor: 4
-  patch: 4
+  patch: 5
   prerelease: ''
   buildmetadata: ''
-  commit: '9e1123'
+  commit: 84e74f
   timestamp:
     year: 2021
     month: 9
