Added support for node 16

--- a/Themes/Adminlte/mix-manifest.json
+++ b/Themes/Adminlte/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-    "/assets/css/asgard.css": "/assets/css/asgard.css",
-    "/assets/js/main.js": "/assets/js/main.js",
-    "/assets/js/chart.js": "/assets/js/chart.js"
+  "/assets/css/asgard.css": "/assets/css/asgard.css",
+  "/assets/js/main.js": "/assets/js/main.js",
+  "/assets/js/chart.js": "/assets/js/chart.js",
+  "/mix.js": "/mix.js"
 }
