--- a/config/version.yml
+++ b/config/version.yml
@@ -4,10 +4,10 @@ current:
   label: v
   major: 1
   minor: 4
-  patch: 5
+  patch: 6
   prerelease: ''
   buildmetadata: ''
-  commit: 84e74f
+  commit: 03ec5c
   timestamp:
     year: 2021
     month: 9
