--- a/env/.env.prod
+++ b/env/.env.prod
@@ -36,9 +36,9 @@ MAIL_ENCRYPTION=tls
 #MAIL_FROM_ADDRESS=null
 #MAIL_FROM_NAME="${APP_NAME}"
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID=1268042
+PUSHER_APP_KEY=6ecb47da9c61529fc355
+PUSHER_APP_SECRET=d727057a93f5d00eb05c
 PUSHER_APP_CLUSTER=eu
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
