--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": "^7.3",
         "astrotomic/laravel-translatable": "^11.9",
+        "beyondcode/laravel-websockets": "^1.12",
         "cartalyst/sentinel": "^5.0",
         "diglactic/laravel-breadcrumbs": "^7.0",
         "doctrine/dbal": "^2.11",
