--- a/env/.env.prod
+++ b/env/.env.prod
@@ -16,7 +16,7 @@ DB_DATABASE=digiqrp
 DB_USERNAME=root
 DB_PASSWORD=987400Kmh
 
-BROADCAST_DRIVER=redis
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=redis
 TRANSLATIONS_CACHE_DRIVER=redis
 QUEUE_CONNECTION=redis
@@ -36,14 +36,13 @@ MAIL_ENCRYPTION=tls
 #MAIL_FROM_ADDRESS=null
 #MAIL_FROM_NAME="${APP_NAME}"
 
-#PUSHER_APP_ID=1268042
-#PUSHER_APP_KEY=6ecb47da9c61529fc355
-#PUSHER_APP_SECRET=d727057a93f5d00eb05c
-#PUSHER_APP_CLUSTER=eu
+PUSHER_APP_ID=1268042
+PUSHER_APP_KEY=6ecb47da9c61529fc355
+PUSHER_APP_SECRET=d727057a93f5d00eb05c
+PUSHER_APP_CLUSTER=eu
 
-#MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-#MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 #SENTRY_LARAVEL_DSN=https://1ea35d7788f54b6b931e6ef5936b6df9@o242607.ingest.sentry.io/5745699
 #SENTRY_TRACES_SAMPLE_RATE=0.10
