--- a/env/.env.prod
+++ b/env/.env.prod
@@ -16,7 +16,7 @@ DB_DATABASE=digiqrp
 DB_USERNAME=root
 DB_PASSWORD=987400Kmh
 
-BROADCAST_DRIVER=pusher
+BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
 TRANSLATIONS_CACHE_DRIVER=redis
 QUEUE_CONNECTION=redis
