--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "nwidart/laravel-menus": "^7.0",
         "nwidart/laravel-modules": "^8.0",
         "pragmarx/version": "^1.3",
+        "pusher/pusher-php-server": "^5.0",
         "ramsey/uuid": "^4.0",
         "spatie/laravel-backup": "^6.16",
         "spatie/laravel-cookie-consent": "^2.12",
