--- a/config/version.yml
+++ b/config/version.yml
@@ -5,9 +5,9 @@ current:
   major: 1
   minor: 4
   patch: 6
-  prerelease: 1-gc839a0aa
+  prerelease: 56-g1727ae62
   buildmetadata: ''
-  commit: c839a0
+  commit: 1727ae
   timestamp:
     year: 2021
     month: 9
