--- a/config/version.yml
+++ b/config/version.yml
@@ -5,9 +5,9 @@ current:
   major: 1
   minor: 4
   patch: 6
-  prerelease: 56-g1727ae62
+  prerelease: 57-g5c61b618
   buildmetadata: ''
-  commit: 1727ae
+  commit: 5c61b6
   timestamp:
     year: 2021
     month: 9
