--- a/env/.env.prod
+++ b/env/.env.prod
@@ -14,7 +14,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=digiqrp
 DB_USERNAME=root
-DB_PASSWORD=987400Kmh
+DB_PASSWORD=987Bhp
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=redis
