--- a/composer.json
+++ b/composer.json
@@ -57,14 +57,15 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
+        "beyondcode/laravel-query-detector": "^1.6",
+        "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
         "league/flysystem-aws-s3-v3": "^1.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "orchestra/testbench": "^6.2",
         "phpunit/phpunit": "~9.4.0",
-        "predis/predis": "^1.1",
-        "facade/ignition": "^2.3.6"
+        "predis/predis": "^1.1"
     },
     "autoload": {
         "psr-4": {
@@ -100,7 +101,10 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
-        "optimize-autoloader": true
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "composer/installers": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
