updated solar reporting

--- a/env/.env.prod
+++ b/env/.env.prod
@@ -6,7 +6,7 @@ APP_CACHE=false
 INSTALLED=true
 APP_LOG_LEVEL=debug
 APP_URL=https://digiqrp.com
-
+SESSION_SECURE_COOKIE=true
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
