added error files

--- a/env/.env.prod
+++ b/env/.env.prod
@@ -5,7 +5,7 @@ APP_DEBUG=false
 APP_CACHE=false
 INSTALLED=true
 APP_LOG_LEVEL=debug
-APP_URL=https://digiqrp.com
+APP_URL=https://www.digiqrp.com
 SESSION_SECURE_COOKIE=true
 LOG_CHANNEL=stack
 
