--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,71 +1,74 @@
-version: '2.1'
+# For more information: https://laravel.com/docs/sail
+version: '3'
 services:
-  app:
+  laravel.test:
     build:
-      context: ./docker/app
-    image: asgardcms/app:latest
+      context: ./vendor/laravel/sail/runtimes/8.1
+      dockerfile: Dockerfile
+      args:
+        WWWGROUP: '${WWWGROUP}'
+    image: sail-8.1/app
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
     ports:
-      - 80:80
-      - 443:443
-    volumes:
-      - .:/var/www/html:cached
-    networks:
-      - digiqrp_net
-  #redis:
-  #  build:
-  #    context: ./docker/redis
-  #  image: asgardcms/redis:latest
-  #  volumes:
-  #    - redisdata:/data
-  #  ports:
-  #    - "6379:6379"
-  #  networks:
-  #    - digiqrp_net
-
-  mysql:
-    build:
-      context: ./docker/mysql
-    image: asgardcms/mysql:latest
-    ports:
-      - 3306:3306
+      - '${APP_PORT:-80}:80'
+      - '${HMR_PORT:-8080}:8080'
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: digiqrp
-      MYSQL_USER: homestead
-      MYSQL_PASSWORD: secret
+      WWWUSER: '${WWWUSER}'
+      LARAVEL_SAIL: 1
+      XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
+      XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
     volumes:
-      - ./docker/db:/var/lib/mysql
+      - '.:/var/www/html'
     networks:
-      - digiqrp_net
-
-  node:
-    build:
-      context: ./docker/node
-    image: asgardcms/node:latest
-    volumes:
-      - .:/var/www/html
-
-  #blackfire:
-  #  image: blackfire/blackfire
-  #  environment:
-  #    BLACKFIRE_SERVER_ID:
-  #    BLACKFIRE_SERVER_TOKEN:
-  #  networks:
-  #  - digiqrp_net
-
-  mailhog:
-    image: mailhog/mailhog:latest
-    container_name: myapp-mailhog
+      - sail
+    depends_on:
+      - mysql
+      - redis
+  mysql:
+    image: 'mysql/mysql-server:8.0'
     ports:
-      - "8003:1025"
-      - "8100:8025"
-
-volumes:
-  #redisdata:
-  #  driver: local
-  mysqldata:
-    driver: local
-
+      - '${FORWARD_DB_PORT:-3306}:3306'
+    environment:
+      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+      MYSQL_ROOT_HOST: "%"
+      MYSQL_DATABASE: '${DB_DATABASE}'
+      MYSQL_USER: '${DB_USERNAME}'
+      MYSQL_PASSWORD: '${DB_PASSWORD}'
+      MYSQL_ALLOW_EMPTY_PASSWORD: 1
+    volumes:
+      - 'sail-mysql:/var/lib/mysql'
+      - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+    networks:
+      - sail
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
+      retries: 3
+      timeout: 5s
+  redis:
+    image: 'redis:alpine'
+    ports:
+      - '${FORWARD_REDIS_PORT:-6379}:6379'
+    volumes:
+      - 'sail-redis:/data'
+    networks:
+      - sail
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      retries: 3
+      timeout: 5s
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - '${FORWARD_MAILHOG_PORT:-1025}:1025'
+      - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
+    networks:
+      - sail
 networks:
-  digiqrp_net:
+  sail:
     driver: bridge
+volumes:
+  sail-mysql:
+    driver: local
+  sail-redis:
+    driver: local
